--- a/shopping_mall/src/main/webapp/WEB-INF/web.xml
+++ b/shopping_mall/src/main/webapp/WEB-INF/web.xml
@@ -55,6 +55,16 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-	
+	<servlet>
+	    <servlet-name>dispatcher</servlet-name>
+	    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+	    <multipart-config>
+	        <max-file-size>10485760</max-file-size> <!-- 10MB -->
+	        <max-request-size>20971520</max-request-size> <!-- 20MB -->
+	        <file-size-threshold>0</file-size-threshold>
+	    </multipart-config>
+	</servlet>
+
+		
 	
 </web-app>
